Cleanup. Finish shape on 3dViewSelect. Not drag a line on first ShapePoint. Resize paintboard.